--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,7 +4,7 @@ rustflags = ["-C", "target-cpu=bonnell"]
 
 [term]
 quiet = false
-verbose = true
+verbose = false
 hyperlinks = true      # whether cargo inserts links into output
 progress.when = 'auto' # whether cargo shows progress bar
 progress.width = 80    # width of progress bar
