--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+# Development config
+config_private.json
+
+# Built files
+static/common.css
+release.tar.gz
