--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "1.3.1"
 license = "MIT"
 edition = "2021"
 build = "src/build.rs"
+description = "Web application for displaying To-Do items from a CalDAV server"
+authors = ["CTCL"]
 
 [build-dependencies]
 grass = "0.13.2"
