--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "todokiosk"
-version = "0.2.1"
+version = "0.3.0"
 license = "MIT"
 edition = "2021"
 build = "src/build.rs"
@@ -14,10 +14,11 @@ grass_compiler = "0.13.2"
 [dependencies]
 actix-files = "0.6.5"
 actix-web = "4.5.1"
+chrono = "0.4.35"
+env_logger = "0.11.3"
+minicaldav = "0.8.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 tera = "1.19.1"
-minicaldav = "0.8.0"
-url = "=2.5.0"
 ureq = "=2.9.6"
-chrono = "0.4.35"
+url = "=2.5.0"
